# app/src/main/java/io/apitomy/axiom/app/rest/WorkflowDefinitionsResourceImpl.java
@@ -419,4 +419,13 @@ public class WorkflowDefinitionsResourceImpl implements WorkflowResource {
     public io.apitomy.axiom.api.beans.WorkflowInstance getWorkflowRun(long runId) {
         throw new WebApplicationException("Not yet implemented", Response.Status.NOT_IMPLEMENTED);
     }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public io.apitomy.axiom.api.beans.WorkflowRunSearchResults listWorkflowDefinitionRuns(
+            long workflowDefinitionId, String status, java.math.BigInteger page, java.math.BigInteger limit) {
+        throw new WebApplicationException("Not yet implemented", Response.Status.NOT_IMPLEMENTED);
+    }
 }
